--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vadim's Page</title>
+    <title>Vadim's Page<title>
+
 </head>
+
 <body>
     <p>Welcome!</p>
 </body>
+
 </html>
