--- a/index.html
+++ b/index.html
@@ -1,15 +1,32 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vadim's Page<title>
-
+    <title>Document</title>
 </head>
 
 <body>
-    <p>Welcome!</p>
+    <!---nav-->
+    <nav>i am a nav</nav>
+
+    <!--img-->
+    <div>
+        <img src="" alt="hero image">
+    </div>
+
+    <!---sec1-->
+    <section>section 1</section>
+    <!---sec2-->
+    <section>section 1</section>
+    <!---sec3-->
+    <section>section 1</section>
+    <!--aside-->
+    <aside></aside>
+    <!--footer-->
+    <footer>footer</footer>
 </body>
 
 </html>
