--- a/index.html
+++ b/index.html
@@ -6,25 +6,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 
-<body>
-    <!---nav-->
-    <nav>i am a nav</nav>
+<body class='bcg-lightgray'>
+    <!--nav-->
+    <nav class=bgc-steelblue>i am a nav</nav>
 
     <!--img-->
     <div>
-        <img src="" alt="hero image">
+        <img class="w-100" src="./assets/img/digital-marketing-meeting.jpg" alt="hero image">
     </div>
 
-    <!---sec1-->
-    <section>section 1</section>
-    <!---sec2-->
-    <section>section 1</section>
-    <!---sec3-->
-    <section>section 1</section>
-    <!--aside-->
-    <aside></aside>
+    <main class="p">
+        <!--sec1-->
+        <section class='bgc-royalblue'>section 1</section>
+        <!--sec2-->
+        <section class='bgc-royalblue'>section 1</section>
+        <!--sec3-->
+        <section class='bgc-royalblue'>section 1</section>
+        <!--aside-->
+        <aside></aside>
+    </main>
     <!--footer-->
     <footer>footer</footer>
 </body>
