--- a/index.html
+++ b/index.html
@@ -9,25 +9,36 @@
     <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 
-<body class='bcg-lightgray'>
-    <!--nav-->
-    <nav class=bgc-steelblue>i am a nav</nav>
+<body class="bcg-lightgray">
+    <!--nav -->
+    <nav class="ai-c bgc-steelblue jc-sb p d-f@lrg">
+        <div class="c-white ff-impact fw-700 fz-2">Horiseon</div>
+        <ul class="m0 lis-n p0 d-f@lrg">
+            <li><a class="c-white ml@lrg" href="">Search Engine Optimization</a></li>
+            <li><a class="c-white ml@lrg" href="">Online Reputation Management</a></li>
+            <li><a class="c-white ml@lrg" href="">Social Media Marketing</a></li>
+        </ul>
+    </nav>
 
     <!--img-->
     <div>
         <img class="w-100" src="./assets/img/digital-marketing-meeting.jpg" alt="hero image">
     </div>
 
-    <main class="p">
-        <!--sec1-->
-        <section class='bgc-royalblue'>section 1</section>
-        <!--sec2-->
-        <section class='bgc-royalblue'>section 1</section>
-        <!--sec3-->
-        <section class='bgc-royalblue'>section 1</section>
+    <main class="d-f@lrg p">
+        <div>
+            <!--sec1-->
+            <section class='bgc-royalblue'>section 1</section>
+            <!--sec2-->
+            <section class='bgc-royalblue mt'>section 2</section>
+            <!--sec3-->
+            <section class='bgc-royalblue mt'>section 3</section>
+        </div>
         <!--aside-->
-        <aside></aside>
+        <aside class='bgc-boringblue'>aside 1</aside>
+
     </main>
+
     <!--footer-->
     <footer>footer</footer>
 </body>
