--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="bcg-lightgray">
     <!--nav -->
     <nav class="ai-c bgc-steelblue jc-sb p d-f@lrg">
-        <div class="c-white ff-impact fw-700 fz-2">Horiseon</div>
+        <div class="c-white ff-impact fw-500 fz-2">Horiseon</div>
         <ul class="m0 lis-n p0 d-f@lrg">
             <li><a class="c-white ml@lrg" href="">Search Engine Optimization</a></li>
             <li><a class="c-white ml@lrg" href="">Online Reputation Management</a></li>
@@ -28,11 +28,30 @@
     <main class="d-f@lrg p">
         <div>
             <!--sec1-->
-            <section class='bgc-royalblue'>section 1</section>
+            <section class='bgc-royalblue c-white mt fz-2'>Search Engine Optimization
+                <p>The dominance of mobile internet use means that users are searching for the
+                    right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO)
+                    allows you to increase your visibility and find the right customers for your business.</p>
+                <div><img class='w-100' src="./assets/img/search-engine-optimization.jpg"
+                        alt="search engine optimization image"></div>
+            </section>
             <!--sec2-->
-            <section class='bgc-royalblue mt'>section 2</section>
+            <section class='bgc-royalblue c-white mt fz-2'>Online Reputation Management
+                <p>The website is full of opinions, and some of these can be negative. Social media allows anyone with
+                    an internet connection to say whatever they want about your business. Online Reputation Management
+                    gives you the control over what potential customers see when they search for your business.</p>
+                <div><img class='w-100' src="./assets/img/online-reputation-management.jpg"
+                        alt="online-reputation-management">
+                </div>
+            </section>
             <!--sec3-->
-            <section class='bgc-royalblue mt'>section 3</section>
+            <section class='bgc-royalblue c-white mt fz-2'>Social Media Marketing
+                <p>Social media continues to have a sizible influence on buying habits. Social media marketing helps you
+                    determine which platforms are suited to your brand, using analytics to find the right markets and
+                    increase your lead generation.</p>
+                <div><img class='w-100' src='./assets/img/social-media-marketing.jpg' alt='social-media-marketing'>
+                </div>
+            </section>
         </div>
         <!--aside-->
         <aside class='bgc-boringblue'>aside 1</aside>
